--- a/02-Linux Fundmentals/03-Process mangement stack/Task( B )/README.me
+++ b/02-Linux Fundmentals/03-Process mangement stack/Task( B )/README.me
@@ -1,1 +1,11 @@
+<h1> TASK (B) </h1>
+
+<h3>Assignment two for kernel module :</h3>
+ <h4>Show all of the following : </h4>
+ <h5>1. Process Information:</h5>
+Provide detailed information about a specific process, including its PID, parent process ID, user, CPU and memory usage, etc.
+> $ ps -p <PID> -o pid,ppid,user,%cpu,%mem,comm
+
+![ Result  ](Process_Info.png "Result")
+
 
